# WhatCode

./: .env.example  .gitignore  AUTHORS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.cargo/: config.toml
.claude/skills/context-compaction/: SKILL.md
.github/workflows/: ci.yml  release.yml
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/space/vairice/whatcode/: MainActivity.kt
android/app/src/main/jniLibs/arm64-v8a/: .gitkeep
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
crates/herta-agent/: Cargo.toml
crates/herta-agent/src/: lib.rs  tool_loop.rs
crates/herta-cli/: Cargo.toml
crates/herta-cli/src/: doctor.rs  main.rs
crates/herta-core/: Cargo.toml
crates/herta-core/src/: config.rs  context.rs  error.rs  lib.rs  long_memory.rs  memory.rs  message.rs  persona.rs  skill.rs  tool.rs
crates/herta-llm/: Cargo.toml
crates/herta-llm/src/: anthropic.rs  google.rs  lib.rs  ollama.rs  openai_compat.rs
crates/herta-tools/: Cargo.toml
crates/herta-tools/src/: builder.rs  code_tools.rs  fs_tools.rs  git.rs  http_tool.rs  lib.rs  memory_tools.rs  proc_tool.rs  registry.rs  safety.rs  skills.rs  system_actions.rs  time_tool.rs  toolchain.rs  util.rs  web_search.rs
crates/herta-tui/: Cargo.toml
crates/herta-tui/src/: app.rs  lib.rs  state.rs  theme.rs  ui.rs
crates/herta-voice/: Cargo.toml
crates/herta-voice/src/: cloud.rs  lib.rs  stt.rs
crates/whatcode-agent/: Cargo.toml
crates/whatcode-agent/src/: lib.rs  tool_loop.rs  workflows.rs
crates/whatcode-cli/: Cargo.toml
crates/whatcode-cli/src/: doctor.rs  main.rs
crates/whatcode-core/: Cargo.toml
crates/whatcode-core/src/: config.rs  context.rs  error.rs  lib.rs  long_memory.rs  memory.rs  mode.rs  persona.rs  settings.rs  skill.rs  tool.rs  wakeword.rs
crates/whatcode-core/src/persona/: anis.rs  common.rs  herta.rs  miku.rs  mod.rs
crates/whatcode-llm/: Cargo.toml
crates/whatcode-llm/src/: anthropic.rs  google.rs  lib.rs  ollama.rs  openai_compat.rs  retry.rs
crates/whatcode-tools/: Cargo.toml
crates/whatcode-tools/src/: build_tools.rs  builder.rs  code_tools.rs  external_agent.rs  fs_tools.rs  git.rs  http_tool.rs  lib.rs  memory_tools.rs  proc_tool.rs  registry.rs  skills.rs  system_actions.rs  time_tool.rs  toolchain.rs  web_search.rs
crates/whatcode-tools/src/git/: advanced.rs  mod.rs  read.rs  write.rs
crates/whatcode-tui/: Cargo.toml
crates/whatcode-tui/src/: app.rs  lib.rs  state.rs  theme.rs  ui.rs
crates/whatcode-voice/: Cargo.toml
crates/whatcode-voice/src/: cloud.rs  lib.rs  stt.rs
docs/: ANDROID_BUILD.md  ANIS.md  ARCHITECTURE.md  HERTA.md  MIKU.md
packaging/aur/: PKGBUILD.in
scripts/: build-android.sh
skills/: code-review.herta  code-review.skill  context-compaction.herta  context-compaction.skill  detailed-debugging.skill  git-workflow.skill  goal-planning.herta  goal-planning.skill  pr-description.skill  refactoring.skill  security-review.skill  test-design.skill
tools/: whatcode_rvc_tts.py
tts/: rvc_tts_engine.py
