# WhatCode — Rust workspace.
# Мощный ассистент для разработки с персонажной подачей (WhatCode).
# Архитектура — модульная: каждый crate автономен и заменяем.
[workspace]
resolver = "2"
members = [
    "crates/whatcode-core",
    "crates/whatcode-llm",
    "crates/whatcode-tools",
    "crates/whatcode-agent",
    "crates/whatcode-voice",
    "crates/whatcode-tui",
    "crates/whatcode-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["VAI PROG <vadim@vai-rice.space>"]
repository = "https://github.com/vadim-khristenko/WhatCode"
description = "WhatCode — hyper-performant Rust coding assistant & TUI with selectable personas"

[workspace.dependencies]
# Внутренние crate-ы.
whatcode-core = { path = "crates/whatcode-core" }
whatcode-llm = { path = "crates/whatcode-llm" }
whatcode-tools = { path = "crates/whatcode-tools" }
whatcode-agent = { path = "crates/whatcode-agent" }
whatcode-voice = { path = "crates/whatcode-voice" }
whatcode-tui = { path = "crates/whatcode-tui" }

# Async runtime и сеть.
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "sync", "time", "process", "io-util", "fs", "signal"] }
tokio-stream = "0.1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream", "multipart"] }

# Сериализация / данные.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Ошибки / логирование.
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# CLI.
clap = { version = "4", features = ["derive", "env"] }

# TUI.
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }

# Конфиг и окружение.
dotenvy = "0.15"
directories = "5"

# Утилиты.
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
