[package]
name = "herta-agent"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Sub-agent orchestration (parallel, streaming) for The Herta"

[dependencies]
herta-core.workspace = true
herta-llm.workspace = true
herta-tools.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true
