[package]
name = "herta-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "The Herta — command-line entry point"

[[bin]]
name = "herta"
path = "src/main.rs"

[dependencies]
herta-core.workspace = true
herta-llm.workspace = true
herta-tools.workspace = true
herta-agent.workspace = true
herta-voice.workspace = true
herta-tui.workspace = true
tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true

# Метаданные для `cargo deb` (Debian/Ubuntu пакет).
[package.metadata.deb]
name = "herta-voiceassistant"
maintainer = "VAI PROG <vadim@vai-rice.space>"
copyright = "2026, VAI PROG <vadim@vai-rice.space>"
license-file = ["../../LICENSE", "0"]
extended-description = "Великая Герта — высокопроизводительный голосовой ассистент и TUI на Rust (персона Honkai: Star Rail)."
section = "utils"
priority = "optional"
assets = [
    ["target/release/herta", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/herta-voiceassistant/README.md", "644"],
    ["../../.env.example", "usr/share/doc/herta-voiceassistant/env.example", "644"],
]
