[package]
name = "whatcode-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "LLM provider abstraction (Ollama, OpenAI-compatible, Google AI, Anthropic) for WhatCode"

[dependencies]
whatcode-core.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
futures.workspace = true
